--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body{
     margin: 0;
     background: #222;
-    font-family: ;
     font-weight: 300;
-    font-family: 'Work Sans' sans-serif;
+    font-family: ;
 }
 
 .container{
@@ -40,5 +39,59 @@ nav ul{
 nav li{
     display: inline-block;
     margin-left: 70px;
-    padding-top: 25px;
+    padding-top: 50px;
+
+    position: relative;
+}
+
+nav a{
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 20px;
+    padding-top: 100px;
+}
+
+nav a:hover{
+    color: #000;
+}
+
+nav a::before{
+    content: '';
+    display: block;
+    height: 5px;
+    width: 100%;
+    background-color: black;
+
+    position: absolute;
+    top: 0;
+    width: 0%;
+
+    transition: all ease-in-out 150ms;
+}
+
+nav a:hover:before{
+    width:100%;
+}
+
+.background1{
+    max-width: 100%;
+    position: absolute;
+}
+
+.button1 {
+    border: none;
+    border-radius: 16px;
+    color: white;
+    background-color: aquamarine;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    position: relative;
+	margin-left: 50%;
+    margin-top: 30%;
 }
