--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+*,
+*::after,
+*::before {
+    margin:0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+
 body{
+    box-sizing: border-box;
     margin: 0;
     background: #222;
     font-weight: 300;
-    font-family: ;
+    /* font-family: ; */
+    height:100%;
+    width:100%
 }
 
 .container{
@@ -12,13 +24,19 @@ body{
 
 header {
     background-color: #EFB926;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    overflow: hidden;
+
+
 }
 
-header::after{
+/* header::after{
     content: '';
     display: table;
     clear: both;
-}
+} */
 
 .logo{
     float:left;
@@ -28,6 +46,7 @@ header::after{
 
 nav{
     float: right;
+
 }
 
 nav ul{
@@ -53,9 +72,10 @@ nav a{
 }
 
 nav a:hover{
-    color: #000;
+    border-bottom: 3px solid black;
+    transition: all ease-in-out 150ms;
 }
-
+/* 
 nav a::before{
     content: '';
     display: block;
@@ -72,26 +92,46 @@ nav a::before{
 
 nav a:hover:before{
     width:100%;
+} */
+
+.main{
+    /* position: relative; */
 }
 
 .background1{
+    /* width:auto;
     max-width: 100%;
-    position: absolute;
+    object-fit: cover;
+    position: relative; */
+}
+
+.main-background{
+    height:100vh;
+    background-size: cover;
+    background-image: url('background1.png');
 }
 
 .button1 {
     border: none;
     border-radius: 16px;
-    color: white;
-    background-color: aquamarine;
+    background-color: #48C8F3;
     padding: 15px 32px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    position: relative;
+    position: absolute;
 	margin-left: 50%;
-    margin-top: 30%;
+    margin-top: 35%;
+}
+
+.button1 a{
+    text-decoration: none;
+    color: white;
+}
+
+.button1 a:hover{
+    border-bottom: 3px solid white;
+    transition: all ease-in-out 150ms;
 }
