--- a/style.css
+++ b/style.css
@@ -28,8 +28,6 @@ header {
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
     overflow: hidden;
-
-
 }
 
 /* header::after{
@@ -59,7 +57,6 @@ nav li{
     display: inline-block;
     margin-left: 70px;
     padding-top: 50px;
-
     position: relative;
 }
 
@@ -121,7 +118,6 @@ nav a:hover:before{
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-    position: absolute;
 	margin-left: 50%;
     margin-top: 35%;
 }
@@ -134,4 +130,9 @@ nav a:hover:before{
 .button1 a:hover{
     border-bottom: 3px solid white;
     transition: all ease-in-out 150ms;
+}
+
+.location{
+    background-color: red;
+    height: 100vh;
 }
