--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Space Mono', monospace;
+}
+
 *,
 *::after,
 *::before {
@@ -24,6 +28,7 @@ body{
 
 header {
     background-color: #EFB926;
+    font-family: 'Space Mono', monospace;
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
@@ -63,8 +68,8 @@ nav li{
 nav a{
     color: black;
     text-decoration: none;
-    text-transform: uppercase;
-    font-size: 20px;
+    /* text-transform: uppercase; */
+    font-size: 27px;
     padding-top: 100px;
 }
 
@@ -115,14 +120,15 @@ nav a:hover:before{
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
-    font-size: 16px;
+    font-size: 25px;
     margin: 4px 2px;
     cursor: pointer;
-	margin-left: 50%;
+	margin-left: 47%;
     margin-top: 35%;
 }
 
 .button1 a{
+    /* font-family: "Roboto", sans-serif; */
     text-decoration: none;
     color: white;
 }
