--- a/style.css
+++ b/style.css
@@ -103,10 +103,7 @@ nav a:hover:before{
     cursor: pointer;
     padding: 7px 20px;
     text-align: center;
-
     position: relative;
-    
-
 }
 
 ul, .button{
@@ -149,12 +146,67 @@ ul, .button{
     height:160vh;
     background-size: cover;
     background-image: url('backhground5.jpg');
+    box-shadow: inset 0 0 5000px 350px #222; 
+}
+
+.nxehta {
+    text-align: center;
+    padding-bottom: 50px;
+    font-size: 60px;
+    color: wheat;
+}
+
+.Menu{
+    height: auto;
+
+}
+.pastas {
+    width: 1500px;
+}
+.pasta-box {
+    display: flex;
+    justify-content: center;
+}
+
+.row {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
+}
+
+.pasta-square > * {
+    width: 100%;
+}
+
+.border {
+    margin-left: 90px;
+}
+
+.name {
+    color: white;
+    margin-top: 10px;
+}
+
+.ingredients{
+    color: wheat;
+    margin-top: 5px;
 }
 
 
-.eat {
-    color: white;
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
+
+.Oferta{
+    height: auto;
+}
+
+.Lokacioni{
+    height: 100vh;
+}
+
+.Kontakto{
+    height: 100vh;
+}
+
+.map{
+    text-align: center;
+
 }
