--- a/loginstyle.css
+++ b/loginstyle.css
@@ -19,7 +19,6 @@ body{
     max-width: 360px;
     margin: 0 auto;
     padding: 45px;
-    text-align: center;
 }
 
 .form input{
@@ -63,4 +62,8 @@ body{
 
 .form .register-form{
     display: none;
+}
+
+.message{
+    text-align: center;
 }
