--- a/rrethnesh.css
+++ b/rrethnesh.css
@@ -1,5 +1,22 @@
-*{
+body{
     background-color: #EFB926;
     height: 100vh;
+    position: relative;
 }
 
+.text{
+    position: absolute;
+    box-sizing: border-box;
+    width: 600px;
+    font-family: 'Work Sans', sans-serif;
+    font-size: x-large;
+    margin-left: 70px;
+    margin-top: 150px;
+}
+
+img {
+    float: right;
+    width: 35%;
+    margin-right: 50px;
+    margin-top: 100px;
+}
