--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ ul, .button{
     color: white;
     outline: none;
     cursor: pointer;
+    z-index: 10;
 }
 
 
@@ -185,7 +186,7 @@ ul, .button{
 
 }
 .pastas {
-    width: 1500px;
+    width: 1300px;
 }
 .pasta-box {
     display: flex;
@@ -222,17 +223,16 @@ ul, .button{
 
 
 .slideshow-container {
-    max-width: 1000px;
+    max-width: 40%;
     position: relative;
     margin: auto;
   }
   
-  /* Hide the images by default */
+
   .mySlides {
     display: none;
   }
-  
-  /* Next & previous buttons */
+
   .prev, .next {
     cursor: pointer;
     position: absolute;
@@ -248,18 +248,16 @@ ul, .button{
     user-select: none;
   }
   
-  /* Position the "next button" to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
-  
-  /* On hover, add a black background color with a little bit see-through */
+
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
   
-  /* Caption text */
+
   .text {
     color: #f2f2f2;
     font-size: 15px;
@@ -269,8 +267,7 @@ ul, .button{
     width: 100%;
     text-align: center;
   }
-  
-  /* Number text (1/3 etc) */
+
   .numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -278,8 +275,7 @@ ul, .button{
     position: absolute;
     top: 0;
   }
-  
-  /* The dots/bullets/indicators */
+
   .dot {
     cursor: pointer;
     height: 15px;
@@ -294,8 +290,7 @@ ul, .button{
   .active, .dot:hover {
     background-color: #717171;
   }
-  
-  /* Fading animation */
+
   .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
@@ -380,14 +375,14 @@ ul, .button{
     opacity: 1;
   }
   
-  .footer p {
-    color: #fff;
+  /* .footer p {
+    color: white;
     margin: 15px 0 10px 0;
     font-size: 1rem;
     font-weight: 300;
-  }
+  } */
   
-.p{
-      color: wheat;
+.footer_p{
+      color: whitesmoke;
       text-align: center;
   }
